CSCEXAM-255 hosting organisation cancels external reservation (#280)
* CSCEXAM-255 support for receiving org cancelling external reservations

* CSCEXAM-255 backend implementation completed

* CSCEXAM-255 UI functionality

* CSCEXAM-255 fix UI condition for canceling

* CSCEXAM-255 cleanup